inventory.client/kustomization/base/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-client-green
  labels:
    app: inventory-client-green
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: inventory-client-green
  template:
    metadata:
      labels:
        app: inventory-client-green
    spec:
      containers:
      - name: inventory-client-green
        image: hylmar/inventory-client:GREEN
        imagePullPolicy: Always
