inventory.client/kustomization/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-client
  labels:
    app: inventory-client
spec:
  # Scaling
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: inventory-client
  template:
    metadata:
      labels:
        app: inventory-client
    spec:      
      containers:
      - name: inventory-client
        image: hylmar/inventory-client:BLUE
        imagePullPolicy: Always
